==> x-itg/x-itg-notebook/screw/.MPU6050/3. MPU6050陀螺仪（LCD液晶显示&匿名上位机）/Src/bsp/i2c/bsp_i2c.c <==
#include "i2c/bsp_i2c.h"
#define Delay HAL_Delay
#define I2C_Speed              400000  //*
#define I2Cx_OWN_ADDRESS7      0X0A
#define ST_Sensors_I2C_WriteRegister  ST_Hard_Sensors_I2C_WriteRegister
#define ST_Sensors_I2C_ReadRegister   ST_Hard_Sensors_I2C_ReadRegister
#define Soft_I2C_SDA_STATE   	HAL_GPIO_ReadPin(Soft_I2C_PORT, Soft_I2C_SDA)
#define Soft_I2C_DELAY 				Soft_I2C_Delay(100000)
#define Soft_I2C_NOP					Soft_I2C_Delay(10)
#define Soft_I2C_READY		    0x00
#define Soft_I2C_BUS_BUSY	    0x01
#define Soft_I2C_BUS_ERROR	  0x02
#define Soft_I2C_NACK	        0x00
#define Soft_I2C_ACK		      0x01
#define ST_Sensors_I2C_WriteRegister  Soft_DMP_I2C_Write
#define ST_Sensors_I2C_ReadRegister   Soft_DMP_I2C_Read
#define I2C_Direction_Transmitter      ((uint8_t)0x00)
#define I2C_Direction_Receiver         ((uint8_t)0x01)

unsigned long ST_Hard_Sensors_I2C_WriteRegister(unsigned char Address, unsigned char RegisterAddr, unsigned short RegisterLen, const unsigned char *RegisterValue)
{
  HAL_StatusTypeDef status = HAL_OK;
  
  I2CTimeout = I2CT_FLAG_TIMEOUT;
  
  status = HAL_I2C_Mem_Write(&hi2c_mpu6050,Address, (uint16_t)RegisterAddr, I2C_MEMADD_SIZE_8BIT, (uint8_t *)RegisterValue, RegisterLen, I2CTimeout); 

  /* 检测I2C通信状态 */
  if(status != HAL_OK)
  {
    /* 调用I2C通信错误处理函数 */
    I2C_MPU6050_Error();
  }        
  return status;
}

unsigned long ST_Hard_Sensors_I2C_ReadRegister(unsigned char Address, unsigned char RegisterAddr, unsigned short RegisterLen, unsigned char *RegisterValue)
{  
  HAL_StatusTypeDef status = HAL_OK;
  I2CTimeout = I2CT_LONG_TIMEOUT;
  
  status = HAL_I2C_Mem_Read(&hi2c_mpu6050, Address, (uint16_t)RegisterAddr, I2C_MEMADD_SIZE_8BIT, RegisterValue, RegisterLen, I2CTimeout);
  
  /* 检测I2C通信状态 */
  if(status != HAL_OK)
  {
    /* 调用I2C通信错误处理函数 */
    I2C_MPU6050_Error();
  }        
  return status;
}

static void Soft_I2C_Configuration(void)
{
	GPIO_InitTypeDef GPIO_InitStruct;
	Soft_I2C_GPIO_CLK_ENABLE(); 
	//
	//
  GPIO_InitStruct.Pin = Soft_I2C_SCL|Soft_I2C_SDA;
  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_OD;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_MEDIUM;
  HAL_GPIO_Init(Soft_I2C_PORT, &GPIO_InitStruct);

  /* 给一个停止信号, 复位I2C总线上的所有设备到待机模式 */
	/* 当SCL高电平时，SDA出现一个上跳沿表示I2C总线停止信号 */
	Soft_I2C_SDA_0;
	Soft_I2C_SCL_1;
	Soft_I2C_DELAY;
	//
	//
	Soft_I2C_SCL_1; 
	Soft_I2C_SDA_1;
	Soft_I2C_DELAY; 
}
